--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
   },
   "dependencies": {
     "@webcomponents/webcomponentsjs": "^2.4.4",
-    "electron": "^10.1.3",
+    "electron": "13.6.6",
     "electron-log": "^4.2.4",
     "electron-settings": "^4.0.2",
     "electron-shortcut-normalizer": "^1.0.0",
